--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Pawfect Match App</string>
     <string name="title_home">Home</string>
     <string name="title_favorites">Favorites</string>
-    <string name="title_About_us">About Us</string>
+    <string name="title_About_us">Info</string>
 </resources>
